--- a/css/style.css
+++ b/css/style.css
@@ -118,9 +118,24 @@ section#about p {
   text-align: justify;
 }
 
+
+.und {
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.4em;
+  background-position: 0 78%;
+  transition: background-size 0.25s ease-in;
+  &:hover {
+    background-size: 100% 88%;
+  }
+  display: inline !important;
+}
+
+
+
 /* home section */
 #home {
-  background: url('../images/home-bg.jpg') no-repeat;
+  /*background: url('../images/home-bg.jpg') no-repeat;*/
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center;
