--- a/css/style.css
+++ b/css/style.css
@@ -118,18 +118,23 @@ section#about p {
   text-align: justify;
 }
 
-
 .und {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.4em;
-  background-position: 0 78%;
-  transition: background-size 0.25s ease-in;
-  &:hover {
-    background-size: 100% 88%;
-  }
+  position: relative;
   display: inline !important;
 }
+
+.und::after {
+  content: '';
+  position: absolute;
+  left: 0; 
+  bottom: 0;
+  height: 0.4em;
+  width: 100%;
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  
+}
+
+
 
 
 
